2011-04-13 Rohin T Narayan <narayan@physi.uni-heidelberg.de>
		* Included class PPrStability Mon
2011-03-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-16
        * More Coverity fixes.

2011-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-15
        * Coverity fixes.

2011-02-28  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-14
        * Clearer plots with ROB errors.

2011-02-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-13
        * Allow for new treatment of Et overflow.

2011-01-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-12
        * Updates for MissingEtSig.

2010-12-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-11
        * Updates to TrigT1CaloLWHistogramTool.
        * Remove obsolete MonHelper.

2010-12-02  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-10
        * Take full account of LimitedRoISet bit.

2010-11-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-09
        * PPrMon: Bugfix.

2010-11-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-08
        * PPrMon: Fix minor bugs in procHistograms.

2010-11-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-07
        * PPrMon: Fine time plots.

2010-08-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-06
        * Correction to profile fill arguments.

2010-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-05
        * Check for uninitialised variables.

2010-08-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-04
        * Revise JEM hardware error histograms.
